--- a/vue-wallet/src/assets/styles/common.scss
+++ b/vue-wallet/src/assets/styles/common.scss
@@ -4,7 +4,7 @@
     font-family: 'Noto Serif TC', serif;
 }
 
-html,body{
+.payProcess{
     background-color: #F2F2F2;
 }
 
@@ -18,6 +18,6 @@ img{
     width: 100%;
 }
 
-input{
+input,select{
     background-color: #e9ecef !important;
 }
